# git-annex-utils

./: ChangeLog  Makefile.am  README  README.developers  configure.ac  pgpkeys.asc
man/: gadu.1.in
src/: Makefile.am
src/common/: findgitdir.c  findgitdir.h  findgittop.c  findgittop.h  normalizepath.c  normalizepath.h  returncodes.h  stub.c  stub.h
src/gadu-src/: dothedu.c  dothedu.h  gadu.c  init.c  init.h  opts.c  opts.h  output.c  output.h  usage.c  usage.h
