bin_PROGRAMS = gadu

#noinst_LTLIBRARIES = libgautils.la

#libgautils_la_SOURCES = 

gadu_SOURCES = gadu-src/gadu.c gadu-src/opts.c gadu-src/opts.h gadu-src/usage.c \
               gadu-src/usage.h common/returncodes.h gadu-src/dothedu.h \
               gadu-src/dothedu.c
#gadu_LDADD = libgautils.la
gadu_CFLAGS = -I$(srcdir)/gadu-src
